Found fix for jumping scrollbar issue

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -36,6 +36,7 @@ $bp-smallest: 31.25em; // 500px
 html {
   box-sizing: border-box;
   font-size: 62.5%;
+  // overflow-y: scroll; // Fixa jumping scrollbar issue, ali izgleda ruznije
 
   @media only screen and (max-width: $bp-medium) {
     font-size: 50%;
@@ -298,8 +299,6 @@ active {
 }
 
 .btn-level {
-  // height: 60px;
-  // width: 60px;
   height: 5.9rem;
   width: 5.9rem;
 
@@ -308,8 +307,8 @@ active {
   justify-content: center;
 
   @media only screen and (max-width: $bp-small) {
-    // height: 5rem;
-    // width: 5rem;
+    height: 5rem;
+    width: 5rem;
   }
 }
 
